[bdist_wheel]
universal=1

[metadata]
name = divemathjax3
description = Jupyter Widgets for DIVE virtual learning environment.
long_description = file: README.md
long_description_content_type = text/markdown
author       = Chung Chan
author_email = chungc@alum.mit.edu
url          = https://github.com/DIVE4DEC/divemathjax3
license = BSD
license_files = LICENSE.txt
platforms = Linux, Mac OS X, Windows
classifiers =
    Intended Audience :: Education
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Framework :: Jupyter
    Framework :: Jupyter :: JupyterLab
    Framework :: Jupyter :: JupyterLab :: 3
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Framework :: Jupyter

[options]
python_requires = >=3.6
include_package_data = True
install_requires = 
packages = find:

[options.packages.find]
where = .
include = divemathjax3
exclude = divemathjax3.tests*

# [options.extras_require]
# test =
#     pytest>=4.6
#     pytest-cov
#     nbval
# docs =
#     jupyter_sphinx
#     nbsphinx
#     nbsphinx-link
#     pytest_check_links
#     pypandoc
#     recommonmark
#     sphinx>=1.5
#     sphinx_rtd_theme
# examples = 

# [options.entry_points]
# console_scripts =

